<resources>
    <string name="app_name" translatable="false">CGLeader</string>
    <string name="nav_header_title">Sua Igreja em Células</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="action_settings">Configurações</string>
    <string name="asteriskred" translatable="false"><font color='#cc0029'>*</font></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_celulas">Células</string>
    <string name="title_activity_add_celula">Nova Célula</string>
    <string name="title_activity_comunicados">Comunicados</string>
    <string name="title_activity_intercessao">Intercessão</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_contato">Contato</string>
    <string name="title_activity_compartilhar">Compartilhar</string>
    <string name="title_activity_enviar">Enviar</string>
    <string name="add">Adicionar</string>
    <string name="comunicados">Comunicados</string>
    <string name="nome">Nome</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="prompt_password">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="celula">Célula</string>
    <string name="lider">Líder</string>
    <string name="celula1">Célula</string>
    <string name="rede1">Rede</string>
    <string name="supervisor1">Supervisor</string>
    <string name="lider1">Líder</string>
    <string name="anfitriao1">Anfitrião</string>
    <string name="vice_lider1">Vice-líder</string>
    <string name="secretario1">Secretário</string>
    <string name="colaborador1">Colaborador</string>
    <string name="dia_da_semana1">Dia da semana</string>
    <string name="horario1">Horário</string>
    <string name="base_celula1">Base célula</string>
    <string name="membros_igr">Membros da igreja</string>
    <string name="convidados1">Convidados</string>
    <string name="criancas1">Crianças</string>
    <string name="total1">Total</string>
    <string name="houve_estudo1">Houve estudo ?</string>
    <string name="houve_quebra_gelo1">Houve quebra-gelo ?</string>
    <string name="teve_lanche1">Teve lanche ?</string>
    <string name="algu_m_aceitou_jesus1">Alguém aceitou Jesus ?</string>
    <string name="reconciliacao1">Reconciliação ?</string>
    <string name="houve_testemunho1">Houve testemunho ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="foi_ministrado_o_estudo" translatable="false"><u>Foi ministrado o estudo ?</u></string>
    <string name="foi_realizado_o_quebra_gelo">Foi realizado o quebra gelo ?</string>
    <string name="algu_m_se_reconcilhou_com_cristo">Alguém se reconcilhou com Cristo ?</string>
    <string name="algu_m_contou_testemunho">Alguém contou testemunho ?</string>
    <string name="foi_servido_lanche">Foi servido lanche ?</string>
    <string name="algu_m_aceitou_jesus_como_seu_salvador">Alguém aceitou Jesus como seu salvador ?</string>
    <string name="hora">hora:</string>
    <string name="dataInicio">Data início</string>
    <string name="dia_da_semana">Dia da semana</string>
    <string name="segunda_feira">Segunda-feira</string>
    <string name="terca_feira">Terça-feira</string>
    <string name="quarta_feira">Quarta-feira</string>
    <string name="quinta_feira">Quinta-feira</string>
    <string name="sexta_feira">Sexta-feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_edit">Editar</string>
    <string name="title_activity_edit_celula">Editar Célula</string>
    <string name="title_activity_read_relatorio">Relatório</string>
    <string name="apagar_a_c_lula">APAGAR A CÉLULA ?</string>
    <string name="apagar_c_lula">Apagar Célula</string>
    <string name="title_activity_relatorio_view">Relatórios</string>
    <string name="title_activity_read_celula">Células</string>
    <string name="title_activity_add_relatorio">Adiciona Relatório</string>
    <string name="title_activity_delete_celula">Apaga Célula</string>
    <string name="Bem_Vindo">Bem Vindo :</string>
    <string name="title_activity_configuracao">Configuração</string>
    <string name="igreja">Igreja</string>
    <string name="endere_o">Endereço</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="pa_s">País</string>
    <string name="Email_erro">Email inválido </string>
    <string name="obrigatorio_email_valid">Obrigatório e-mail válido</string>
    <string name="obrigatorio_maior_5">Obrigatório com +5 dígitos</string>
    <string name="registrando">Realizando o registro…</string>
    <string name="iniciando_login">Iniciando Login…</string>
    <string name="registro_existe">Esse registro já existe.</string>
    <string name="usuario_existe">Usuário já logado</string>
    <string name="Falha_registro">Falha ao registrar usuário</string>
    <string name="Registro_sucesso">Usuário registrado com sucesso.</string>
    <string name="logado_sucesso">Login logado com sucesso.</string>
    <string name="falha_login">Usuário ou senha incorretos. Já é registrado?</string>
    <string name="action_logout">logout</string>
    <string name="Logout_sucesso">Logout realizado com sucesso.</string>
    <string name="title_activity_add_igreja">Nova igreja</string>
    <string name="action_addIgreja">Nova Igreja</string>
    <string name="title_activity_add_intercessaoa">Nova intercessão</string>
    <string name="title_activity_add_agenda">Nova agenda</string>
    <string name="cep">Cep</string>
    <string name="c_lulas">Células</string>
    <string name="relat_rios">Relatórios</string>
    <string name="data">Data:</string>
    <string name="motivo">Motivo:</string>
    <string name="evento">Evento:</string>
    <string name="data_evento">Data Evento:</string>
    <string name="salvar">Salvar</string>
    <string name="informacaoAPP">Este aplicativo destina-se ao gerenciamento de células em igrejas.</string>
    <string name="android_developed_email">E-mail do desenvolvedor:</string>
    <string name="contato">Contato</string>
    <string name="title_activity_igrejas_criadas">Igreja</string>
    <string name="c_digo_do_pa_s_required">DDD*</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_required">(DDD) + celular*</string>
    <string name="telefone_fixo">(DDD) + Fixo</string>
    <string name="celulas">Células</string>
    <string name="descri_o">Descrição:</string>
    <string name="local">Local:</string>
    <string name="denominacao">Denominação</string>
    <string name="_000000000000000000" translatable="false">000000000000000000</string>
    <string name="data_de_nascimento_required">Data de Nascimento*</string>
    <string name="data_de_batismo">Data de Batismo</string>
    <string name="nome_do_pai">Nome do Pai</string>
    <string name="nome_da_m_e">Nome da Mãe</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="sexo">Sexo</string>
    <string name="idade">Idade</string>
    <string name="nome_required">Nome*</string>
    <string name="nome_notenable">Nome - Editável pelo Pastor</string>
    <string name="email_required">Email*</string>
    <string name="cargo_igreja">Cargo Igreja*</string>
    <string name="grupo_padr_o">Grupo Padrão</string>
    <string name="item">Item</string>
    <string name="apagar_igreja_question">APAGAR IGREJA ?</string>
    <string name="apagar_igreja">APAGAR IGREJA</string>
    <string name="apagar_igreja_min">Apagar Igreja</string>
    <string name="entrar">Entrar</string>
    <string name="Intersession">Intercessão</string>
    <string name="Schedule">Horário</string>
    <string name="Home">Início</string>
    <string name="Cells">Células</string>
    <string name="Communication">Comunicação</string>
    <string name="Contact">Contato</string>
    <string name="Share">Compartilhar</string>
    <string name="Send">Enviar</string>
    <string name="content_description_end_icon">Icone e-mail</string>
    <string name="editar_igreja">Editar Igreja</string>
    <string name="lideres">Lideres</string>
    <string name="editar_lider">Editar Líder</string>
    <string name="Sobre">Sobre</string>
    <string name="agenda">Agenda</string>
    <string name="DDI">DDI</string>
    <string name="ddi_req">"DDI* ex:. Brasil 55 "</string>
    <string name="messageRelatorio">Nenhum relatório foi criado ainda.</string>
    <string name="messageRelatorio2">Crie uma Célula e depois crie os relatórios para ela.</string>
    <string name="messageRelatorio3">Click e segure o nome da célula para criar um Relátorio!</string>
    <string name="messageCelula">Nenhuma célula foi criada ainda.</string>
    <string name="messageCelula2">Crie uma Célula e depois crie os relatórios para ela.</string>
    <string name="messageLider">1° passo:  Criar uma célula</string>
    <string name="messageLider2" formatted="true">2° passo: crie o líder para a célula.</string>
    <string name="messageLider3" formatted="true">Coloque o mesmo nome do líder na célula e no líder!</string>
    <string name="messageContato">Nenhum Contato foi criado ainda, os contatos são informações que vem do Cadastro de Lideres.</string>
    <string name="messageContato2">Só aparecerá algo aqui se um Líder for criado!</string>
    <string name="messageIgreja">A sua Igreja ainda não foi criada, crie uma Igreja e depois crie as células.</string>
    <string name="sem_lider">Sem Lider</string>
    <string name="sem_celula">Sem Célula</string>
    <string name="Relatorio">Relatório</string>
    <string name="relatorios">Relatórios</string>
    <string name="read_lider">Líder</string>
    <string name="deus_bom">Deus é bom!</string>
    <string name="action_Sair">Sair</string>
    <string name="desconectar">Desconectar</string>
    <string name="title_activity_add_leader">Novo Líder</string>
    <string name="futuras_melhorias">Futuras melhorias</string>
    <string name="nomeusuario" translatable="false">nomeUsuario</string>
    <string name="uidusuario" translatable="false">uidUsuario</string>
    <string name="_55" translatable="false">+55</string>
    <string name="data_" translatable="false">/ /</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="ver_" translatable="false">ver 2.1.1</string>
    <string name="fabianodspereira_outlook_com" translatable="false">fabianodspereira@outlook.com</string>
    <string name="cria_o_pr_tica_de_relat_rios">Criação prática de relatórios</string>
    <string name="lista_din_mica_de_contato_dos_l_deres">Lista dinâmica de contato dos líderes</string>
    <string name="organiza_o_e_rapidez_de_informa_es">Organização e rapidez de informações</string>
    <string name="preencha_o_email_e_senha_e_click_em_registrar">Preencha o email e senha e click em registrar!</string>
    <string name="preencha_o_email_e_click_em_registrar">Preencha o email e click em enviar!</string>
    <string name="google" translatable="false">Google</string>
    <string name="google_login" translatable="false">Google login</string>
    <string name="Configura_o_de_acesso">Configuração de acesso</string>
    <string name="Celular">Celular</string>
    <string name="liderId">Lider Id</string>
    <string name="ex_mu_rjo1xhfxg_zcp6ag">ex.: -MU-rJO1XHfxG-zCP6aG</string>
    <string name="avan_ar">Avançar</string>
    <string name="Codigo">Código</string>
    <string name="configura_o_de_acesso_n_com_seu_n_mero_de_celular_e_id">Configuração de acesso \n com seu número de celular e ID</string>
    <string name="insira_o_n_mero_do_seu_celular">Insira o número do seu celular</string>
</resources>