<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Configura_o_de_acesso">
        <EditTextPreference
            android:defaultValue=""
            android:key="Celula"
            android:selectAllOnFocus="true"
            android:title="@string/celula"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue=""
            android:key="LiderID"
            android:selectAllOnFocus="true"
            android:title="@string/liderId"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue=""
            android:summary="@string/telefone"
            android:title="@string/Celular"
            app:key="Fone"
            app:title="@string/Celular"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>